--- a/ubuntu-22-dev/Dockerfile
+++ b/ubuntu-22-dev/Dockerfile
@@ -21,7 +21,7 @@ RUN apt-get install -y \
   build-essential libtool chrpath cpio debianutils diffstat file \
   gawk gcc git iputils-ping libacl1 locales python3 python3-git \
   python3-jinja2 python3-pexpect python3-pip python3-subunit socat \
-  texinfo unzip wget xz-utils zstd
+  sudo texinfo unzip wget xz-utils zstd
 
 # Desktop specific
 
